[gd_scene load_steps=7 format=3 uid="uid://bdf7n8172jmq"]

[ext_resource type="Script" uid="uid://d323g585uoxuw" path="res://lightning.gd" id="1_wtcfe"]
[ext_resource type="Texture2D" uid="uid://43vpon1kdw1c" path="res://icon.svg" id="2_0e48y"]
[ext_resource type="PackedScene" uid="uid://dwrw4mrmxttyv" path="res://attribute_slider.tscn" id="3_epypp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_epypp"]
radius = 64.1249

[sub_resource type="CircleShape2D" id="CircleShape2D_0hol4"]
radius = 64.1249

[sub_resource type="Environment" id="Environment_0e48y"]
background_mode = 3
glow_enabled = true

[node name="Node2D" type="Node2D"]
script = ExtResource("1_wtcfe")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Lines" type="Node2D" parent="."]
position = Vector2(305, 327)

[node name="Source" type="Sprite2D" parent="."]
position = Vector2(224, 287)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_0e48y")

[node name="Area2D" type="Area2D" parent="Source"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Source/Area2D"]
shape = SubResource("CircleShape2D_epypp")

[node name="Target" type="Sprite2D" parent="."]
position = Vector2(928, 286)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_0e48y")

[node name="Area2D" type="Area2D" parent="Target"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Target/Area2D"]
shape = SubResource("CircleShape2D_0hol4")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0e48y")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="BoxContainer" type="BoxContainer" parent="CanvasLayer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 146.0
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/BoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
theme_override_constants/separation = 0

[node name="Button" type="Button" parent="CanvasLayer/BoxContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Emit"

[node name="TimeAttributeSlider" parent="CanvasLayer/BoxContainer/PanelContainer/VBoxContainer" instance=ExtResource("3_epypp")]
unique_name_in_owner = true
layout_mode = 2
attribute = "Time"
step = 0.1
value = 3.0

[node name="AccuracyAttributeSlider" parent="CanvasLayer/BoxContainer/PanelContainer/VBoxContainer" instance=ExtResource("3_epypp")]
unique_name_in_owner = true
layout_mode = 2
attribute = "Accuracy"
step = 0.1

[node name="StrandsAttributeSlider" parent="CanvasLayer/BoxContainer/PanelContainer/VBoxContainer" instance=ExtResource("3_epypp")]
unique_name_in_owner = true
layout_mode = 2
attribute = "Strands"

[node name="PointsAttributeSlider" parent="CanvasLayer/BoxContainer/PanelContainer/VBoxContainer" instance=ExtResource("3_epypp")]
unique_name_in_owner = true
layout_mode = 2
attribute = "Points"

[node name="GlowAttributeSlider" parent="CanvasLayer/BoxContainer/PanelContainer/VBoxContainer" instance=ExtResource("3_epypp")]
unique_name_in_owner = true
layout_mode = 2
attribute = "Glow"
step = 0.1
value = 2.5
